z-index fix

--- a/src/css/toast.less
+++ b/src/css/toast.less
@@ -1,6 +1,6 @@
 .toast-container {
   position: fixed;
-  z-index: 800;
+  z-index: 810;
   top: 180px;
   left: 30px;
   right: 30px;
@@ -20,5 +20,11 @@
     .loading {
       margin: auto;
     }
+  }
+}
+
+.mgm-toasts {
+  .mask {
+    z-index: 800;
   }
 }
